# DZ_21.1

./: README.md  categories.json  data.json  gitignore  groups.json  products.json  pyproject.toml  trash.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_is_publication.py  0003_alter_blog_count_views_alter_blog_image_and_more.py  0004_alter_blog_image.py  0005_alter_blog_image.py  0006_alter_blog_slug.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: run_catalog.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0002_product_manufactured_at.py  0003_version.py  0004_product_owner.py  0005_alter_product_options_product_is_published.py
catalog/templates/: base.html  contacts.html  products_detail.html  products_list.html
catalog/templates/catalog/: base.html  category_list.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: no_mail.html  password_reset.html  password_reset_done.html  user_form.html
