[tool.poetry]
name = "pythonproject-dz-19-2"
version = "0.1.0"
description = ""
authors = ["Vladimir Khapaev <khapaev@mail.ru>"]
readme = "README.md"
packages = [{include = "pythonproject_dz_19"}]

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
black = "^24.4.2"
ipython = "^8.26.0"
pytils = "^0.4.1"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
